<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="just_java_order_for">Just Java order for</string>
    <string name="client_name">Client name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="total">Total: $</string>
    <string name="thank_you">Thank you!</string>
    <string name="the_maximum_quantity_is">The maximum quantity is</string>
    <string name="the_minimum_quantity_is">The minimum quantity is</string>
</resources>
